# project-actio

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  Makefile  README.md  bootstrap.sh  build.py  imgui.ini  run.sh  setup.sh  world_old.cpp  world_old.h
shaders/: edge.vert  forward.frag  forward.geom  forward.geom1  forward.vert  geometry_pass.frag  geometry_pass.vert  light_pass.frag  light_pass.vert  null.frag  null.vert  shadow_map.frag  shadow_map.geom1  shadow_map.vert  shadow_volume.geom  shadow_volume.vert  skybox-deferred.frag  skybox-deferred.vert  skybox.frag  skybox.vert
src/: ag.cpp  ag.h  glad.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  main.cpp  main.h
src/animation/: animation.cpp  animation.h  node_animation.cpp  node_animation.h  process.cpp  process.h
src/app/: app.cpp  app.h  monitor.cpp  monitor.h
src/buffers/: buffers.h  geometry.h  textures.h
src/cameras/: camera.cpp  camera.h  camera_control.cpp  camera_control.h
src/core/: geometry.cpp  geometry.h  geometry_builder.cpp  geometry_builder.h  geometry_primitive.cpp  geometry_primitive.h  material.cpp  material.h  material_builder.cpp  material_builder.h  mesh.cpp  mesh.h  mesh_bone.cpp  mesh_bone.h  model.cpp  model.h  model_builder.cpp  model_builder.h  object3D.cpp  object3D.h  skin.cpp  skin.h  skin_builder.cpp  skin_builder.h  texture.cpp  texture.h  vertex.cpp  vertex.h
src/ecs/: component.h  entity.h  system.h
src/forward/: entityx.h
src/game/: action.h  assets.cpp  assets.h  assets_loader.cpp  assets_loader.h  assets_resource.cpp  assets_resource.h  assets_types.cpp  assets_types.h  chapter.cpp  chapter.h  character.h  context.cpp  context.h  engine.cpp  engine.h  game.cpp  game.h  input_output.h  objects_manager.h  physic_manager.cpp  physic_manager.h  script.cpp  script.h  story.h  story_importer.cpp  story_importer.h  tasks.cpp  tasks.h  weapon_handler.h  world.cpp  world.h  world_actor.h  world_importer.cpp  world_importer.h  world_object.cpp  world_object.h  world_tasks.cpp  world_tasks.h
src/game/components/: ai_control.h  base.h  camera.h  char_items.h  character.h  controlled.h  direction.h  equipment.h  helper.h  inventory.h  light_directional.h  light_helper.h  light_point.h  light_spot.h  mesh.h  meshes.h  model.cpp  model.h  nodes.h  physic.h  skin.h  (+12 more)
src/helpers/: arrow_helper.cpp  arrow_helper.h  bounding_box_helper.cpp  bounding_box_helper.h  camera_orientation_helper.cpp  camera_orientation_helper.h  point_light_helper.cpp  point_light_helper.h
src/lib/: app_paths.h  assets.cpp  assets.h  assets_base.cpp  assets_base.h  assets_loader.cpp  assets_loader.h  assets_material.cpp  assets_material.h  assets_model.cpp  assets_model.h  assets_resource.cpp  assets_resource.h  assets_script.cpp  assets_script.h  assets_shader.cpp  assets_shader.h  assets_texture.cpp  assets_texture.h  assets_types.cpp  assets_types.h  assimp.cpp  assimp.h  colors.h  comparators.h  console.h  cycle.h  data.cpp  data.h  data_loader.cpp  data_loader.h  filesystem_resource.cpp  filesystem_resource.h  image_data.cpp  image_data.h  image_loader.cpp  image_loader.h  image_parser.cpp  image_parser.h  ini_loader.cpp  (+32 more)
src/lights/: direction_light.cpp  direction_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/materials/: material.cpp  material.h
src/math/: Box3.cpp  Box3.h  Frustrum.h  Sphere.cpp  Sphere.h
src/mem/: vbuffer.cpp  vbuffer.h  vbuffermap.cpp  vbuffermap.h  vmem.h
src/memory/: allocator.cpp  allocator.h  callocator.cpp  callocator.h  freelistallocator.cpp  freelistallocator.h  linearallocator.cpp  linearallocator.h  poolallocator.cpp  poolallocator.h  singlylinkedlist.h  singlylinkedlistimpl.h  stackallocator.cpp  stackallocator.h  stacklinkedlist.h  stacklinkedlistimpl.h  utils.h
src/renderer/: base_renderer.cpp  base_renderer.h  frame_context.cpp  frame_context.h  handle.h  handler.h  init.cpp  init.h  material.cpp  material.h  params.cpp  params.h  raw_program.cpp  raw_program.h  renderable.h  renderer.cpp  renderer.h  renderer_types.h  shader.h  shader_content.cpp  shader_content.h  shader_description.cpp  shader_description.h  stats.cpp  stats.h  texture.h  window_context.cpp  window_context.h
src/resources/: assimp_resource.cpp  assimp_resource.h  buffer_resource.cpp  buffer_resource.h  file_resource.cpp  file_resource.h  resources.h
src/scenes/: scene.cpp  scene.h  scene_context_loader.cpp  scene_context_loader.h
(+110 files in other folders)
